# udemy-software-dev-data-ai

./: .gitignore  LICENSE  Makefile  README.md  README.rst  setup.cfg
com/pyscale/udemy/sdlc/dsci/main/lecture1/: best_practices.py  pitfalls.py
com/pyscale/udemy/sdlc/dsci/main/lecture2/: module_example.py  script_example.py
doc/: .buildinfo  genindex.html  index.html  objects.inv  readme_link.html  search.html  searchindex.js
doc/_sources/lectures/: lecture1.rst.txt  lecture2.rst.txt  lecture3.rst.txt  lecture4.rst.txt
doc/lectures/: lecture1.html  lecture2.html  lecture3.html  lecture4.html  lecture5.html
sphinx-docs/source/: conf.py  index.rst
sphinx-docs/source/lectures/: lecture1.rst  lecture2.rst  lecture3.rst  lecture4.rst  lecture5.rst
