[metadata]
name = com-pyscale-udemy-tutorial
version = file: VERSION
description = The tutorial to how to apply Software Development Principles in Data & AI
long_description = file: README.rst, CHANGELOG.rst, LICENSE
keywords = one, two
license = file: LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pandas==1.3.0
    sklearn==0.0

[options.package_data]
* = *.txt, *.rst

[options.extras_require]
contribute = Sphinx==4.0.1; pytest==6.2.4

